# skillshub

./: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml
.qoder/repowiki/zh/content/: 快速开始.md  故障排除.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5fb1c261fa23_initial_tables.py
backend/app/: config.py  database.py  main.py
backend/app/api/: auth.py  permission_requests.py  skills.py  tools.py  users.py
backend/app/api/admin/: approvals.py  audit.py  departments.py  roles.py  skills.py  tools.py  users.py
backend/app/api/v1/: verify.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  audit.py  permission.py  user.py
backend/app/schemas/: auth.py  common.py  permission.py  role.py  skill.py  tool.py  user.py
backend/app/services/: audit.py  auth.py  department.py  feishu.py  permission.py  role.py  skill.py  tool.py  user.py
backend/app/utils/: security.py
backend/scripts/: seed.py
frontend/admin/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/admin/src/: App.tsx
frontend/admin/src/api/: index.ts  request.ts
frontend/admin/src/components/: MainLayout.tsx
frontend/admin/src/pages/: Approvals.tsx  AuditLogs.tsx  Dashboard.tsx  Departments.tsx  Login.tsx  Roles.tsx  Skills.tsx  Tools.tsx  (+1 more)
frontend/client/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/client/src/: App.tsx
(+80 files in other folders)
