[project]
name = "toolhub"
version = "0.1.0"
description = "AI Skills & Tools Permission Management System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "toolhub-backend",
]

[tool.uv.sources]
toolhub-backend = { workspace = true }

[tool.uv.workspace]
members = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]
